crates/bingo-surface-tui/src/views/snapshots/bingo_surface_tui__views__tests__text.snap
---
source: crates/bingo-surface-tui/src/views/tests.rs
expression: at_80(&view)
---
"what a plugin wrote                                                             "
