crates/bingo-surface-tui/src/views/snapshots/bingo_surface_tui__views__tests__tree.snap
---
source: crates/bingo-surface-tui/src/views/tests.rs
expression: at_80(&view)
---
"└─ project                                                                      "
"   ├─ reviewer [ waiting ]                                                      "
"   └─ scout [ done ]                                                            "
"      └─ Read(Cargo.toml)                                                       "
